fixed button not align on app card

--- a/frontend/src/components/Lists/ApplicationList/ApplicationCard/ApplicationCard.css
+++ b/frontend/src/components/Lists/ApplicationList/ApplicationCard/ApplicationCard.css
@@ -47,3 +47,9 @@
     font-size: 0.85em;
     margin: 0.25rem;
 }
+
+.application-card-top-buttons{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
